# Amphion

./: .gitattributes  .gitignore  Amphion_Build_Spec.docx  README.md  config.yaml  pyproject.toml  requirements.txt
app/: README.md  app.py  requirements.txt
data/processed/: activity_classification.parquet  activity_regression.parquet  hemolysis.parquet  manifest.json  manifest_tox.json  mic_per_strain.parquet
docs/: METHODS.md
models/: esm_config.json  generator_vae.pt  metrics_esm.json  mic_reg.joblib
notebooks/: 01_data_and_baseline_classifier.ipynb  02b_esm2_upgrade.ipynb  04_train_generator.ipynb
reports/: activity_model_card.md  data_profile.md  evaluation.md  mic_model_card.md  shortlist.csv  shortlist_report.md  toxicity_model_card.md
scripts/: benchmark.py  deploy_space.py  export_esm_inputs.py  profile_data.py  run.py
src/amphion/: __init__.py  config.py  pipeline.py  rank.py  run.py  score.py  utils.py
src/amphion/data/: __init__.py  build_datasets.py  build_tox.py  clean.py  cluster.py  download.py
src/amphion/features/: __init__.py  esm_embed.py  featurize.py
src/amphion/filters/: __init__.py  novelty.py
src/amphion/generator/: __init__.py  sample.py  vae.py
src/amphion/models/: __init__.py  activity_clf.py  mic_reg.py  tox_clf.py
